force-app/main/default/objects/Trainee__c/Trainee__c.object-meta.xml
<CustomObject>
    <label>Trainee</label>
    <nameField>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>