force-app/main/default/objects/Trainee__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First_name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>