force-app/main/default/objects/Trainee__c/fields/Last_name__c.field-meta.xml
<CustomField>
    <fullName>Last_name__c</fullName>
    <label>Last_name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>