force-app/main/default/objects/Trainee__c/fields/Thank_You_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Email_Sent__c</fullName>
    <label>Thank You Email Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>