force-app/main/default/objects/Trainee__c/fields/Training_program_feedback__c.field-meta.xml
<CustomField>
    <fullName>Training_program_feedback__c</fullName>
    <label>Training program feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>