force-app/main/default/objects/Trainee__c/fields/Vote__c.field-meta.xml
<CustomField>
    <fullName>Vote__c</fullName>
    <label>Vote</label>
    <length>15</length>
    <type>Text</type>
</CustomField>